--- a/puzzle1007/WebContent/index.html
+++ b/puzzle1007/WebContent/index.html
@@ -13,8 +13,8 @@
 <div class='tile'></div>
 <div class='tile'></div>
 </div>
-
-<button id='btn1' type='button'>색상변경</button>
+<div id='resultTrue'>정답입니다!!!</div>
+<button id='btn1' type='button'>게임시작</button>
 
 
 
