--- a/puzzle1007/WebContent/index.html
+++ b/puzzle1007/WebContent/index.html
@@ -13,11 +13,10 @@
 <div class='tile'></div>
 <div class='tile'></div>
 </div>
-<div id='resultTrue'>정답입니다!!!</div>
-<button id='btn1' type='button'>게임시작</button>
-
-
-
+<div id='puzzleBot'>
+<button id='btn1' type='button'>시작</button>
+<div id='resultTrue'>정답입니다 !</div>
+</div>
 
 
 
