--- a/puzzle1007/WebContent/index.html
+++ b/puzzle1007/WebContent/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>퍼즐</title>
+<title>타일 매트릭스</title>
 <link href="common.css" rel="stylesheet" type="text/css">
 <script src='jquery-1.11.1.js'></script>
 </head>
@@ -14,7 +14,8 @@
 <div class='tile'></div>
 </div>
 <div id='puzzleBot'>
-<button id='btn1' type='button'>시작</button>
+<button id='btnStart' type='button'>시작</button>
+<button id='btnNext' type='button' style='display:none;'>다음판</button>
 <div id='resultTrue'>정답입니다 !</div>
 </div>
 
